refactor replace admin module debug runs
